# pelican-metadata-generator-rs

./: Cargo.toml
src/: main.rs  models.rs  readers.rs  ui.rs  writers.rs
src/readers/: markdown.rs
src/ui/: cli.rs  tui.rs
